yaml/yaml/myapp.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
      app.kubernetes.io/instance: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/instance: nginx
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: myapp
        image: ikubernetes/myapp:v3
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 1
          periodSeconds: 2
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 1
          periodSeconds: 3
          failureThreshold: 2
        resources:
          requests:
            memory: "32Mi"
            cpu: "1m"
          limits:
            memory: "256Mi"
            cpu: "100m"
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: myapp
#spec:
#  selector:
#    app: myapp
#  type: ClusterIP
#  ports:
#  - name: http
#    port: 80 
#    targetPort: 80
