yaml/yaml/xwsapi.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: xwsapi
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: xwsapi
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: xwsapi
        image: xwsapi:1.0.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 1
          failureThreshold: 2
        resources:
          requests:
            memory: "6Gi"
            cpu: "4000m"
          limits:
            memory: "6Gi"
            cpu: "4000m"
