yaml/yaml/mysqlservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ideal-meerkat
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: mysql
    helm.sh/chart: mysql-0.1.0
  name: ideal-meerkat-mysql
  namespace: default
spec:
  clusterIP: 10.109.148.65
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app.kubernetes.io/instance: ideal-meerkat
    app.kubernetes.io/name: mysql
  sessionAffinity: None
  type: ClusterIP
