yaml/yaml/tomcat-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  selector:
    app: xwsapi
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
