yaml/yaml/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: com
spec:
  hosts:
  - "*.com"
  ports:
  - number: 80
    name: http
    protocol: HTTP
