yaml/yaml/egress2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cn
spec:
  hosts:
  - "*.cn"
  ports:
  - number: 80
    name: http
    protocol: HTTP
