yaml/yaml/grafana-ingress.yaml
apiVersion: extensions/v1beta1      
kind: Ingress   
metadata:           
  name: ingress-grafana  
  namespace: ingress-nginx     
  annotations:           
    kubernetes.io/ingress.class: "nginx"
spec:      
  rules:   
  - host: grafana.yunfuzg.com    
    http:
      paths:       
      - path:       
        backend:    
          serviceName: grafana
          servicePort: 3000
