yaml/yaml/https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: github
spec:
  hosts:
  - github.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: github
spec:
  hosts:
  - github.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - github.com
    route:
    - destination:
        host: github.com
        port:
          number: 443
      weight: 100
