yaml/yaml/jenkins-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jenkins-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "myapp.yunfuzg.com"
#    tls:
#      mode: SIMPLE
#      serverCertificate: /tmp/tls.pem
#      privateKey: /tmp/tls.key
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins
spec:
  hosts:
  - "myapp.yunfuzg.com"
  gateways:
  - jenkins-gateway
  http:
  - match:
    - uri:
        prefix: /
#    - uri:
#        prefix: /delay
#    - uri:
#        prefix: /headers
    route:
    - destination:
        port:
          number: 8080
        host: jenkins
