yaml/yaml/myapp-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myapp-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - www.yunfuzg.com
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - www.yunfuzg.com
  gateways:
  - myapp-gateway
  http:
  - match:
    - uri:
        prefix: /
    - uri:
#        prefix: /delay
#    - uri:
#        prefix: /headers
    route:
    - destination:
        port:
          number: 80
        host: myapp
