yaml/yaml/myapp-ingress1.yaml
apiVersion: extensions/v1beta1      
kind: Ingress   
metadata:           
  name: ingress-myapp
  namespace: ingress-nginx   
  annotations:           
    kubernetes.io/ingress.class: "nginx"
spec:      
  rules:   
  - host: myapp1.yunfuzg.com    
    http:
      paths:       
      - path:       
        backend:    
          serviceName: myapp
          servicePort: 80
