yaml/yaml/myapp2-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myapp-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - myapp.yunfuzg.com
#    tls:
#      mode: SIMPLE
#      serverCertificate: /tmp/tls.pem
#      privateKey: /tmp/tls.key
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - myapp.yunfuzg.com
  gateways:
  - myapp-gateway
  http:
  - match:
    - uri:
        prefix: /
    - uri:
#        prefix: /delay
#    - uri:
#        prefix: /headers
    route:
    - destination:
        port:
          number: 80
        host: myapp
        subset: v1
      weight: 20
    - destination:
        port:
          number: 80
        host: myapp
        subset: v2
      weight: 80
