yaml/yaml/nginx-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - "*.yunfuzg.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.yunfuzg.com"
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - "*.yunfuzg.com"
  gateways:
  - nginx-gateway
  http:
  - match:
    - uri:
        prefix: /
    - uri:
#        prefix: /delay
#        #    - uri:
#        #        prefix: /headers
    route:
    - destination:
        port:
          number: 80
        host: nginx
